[package]
name = "httpserver"
version = "0.0.0"
edition = "2021"
description = "Simple HTTP Server"
readme = "README.md"
homepage = "https://github.com/SajjadPourali/httpserver-rs"
repository = "https://github.com/SajjadPourali/httpserver-rs"
license = "MIT"
keywords = ["http"]
authors = ['Sajjad Pourali <sajjad@pourali.com>']
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
